--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -1,7 +1,7 @@
 // Typography
-$sans-serif: $helvetica;
-$serif: $georgia;
-$base-font-family: $sans-serif;
+$sans-serif: 'Open Sans';
+$serif: 'Merriweather';
+$base-font-family: $serif;
 $header-font-family: $base-font-family;
 
 // Font Sizes
@@ -23,8 +23,10 @@ $base-spacing: $base-line-height * 1em;
 $base-z-index: 0;
 
 // Colors
+$snow: #ffffff;
+$tomato: #c0392b;
 $blue: #477DCA;
-$dark-gray: #333;
+$dark-gray: #444;
 $medium-gray: #999;
 $light-gray: #DDD;
 $light-red: #FBE3E4;
@@ -36,7 +38,7 @@ $base-background-color: white;
 
 // Font Colors
 $base-font-color: $dark-gray;
-$base-accent-color: $blue;
+$base-accent-color: $snow;
 
 // Link Colors
 $base-link-color: $base-accent-color;
@@ -51,7 +53,7 @@ $notice-color: lighten($base-accent-color, 40);
 $success-color: $light-green;
 
 // Border color
-$base-border-color: $light-gray;
+$base-border-color: $snow;
 $base-border: 1px solid $base-border-color;
 
 // Forms
