--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -1,10 +1,32 @@
-header {
-  background-image: url("assets/images/header-background.jpg");
-  height: 100vh;
+
+.header-homepage {
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("/assets/images/header-background.jpg") center center fixed no-repeat;
+  background-size: cover;
+  color: $snow;
   width: 100vw;
+  height: 90vh;
+
+  h1, h2, h3 {
+    clear: both;
+    margin: $base-spacing / 2;
+  }
+
+  h1 {
+    font-size: 4em;
+    letter-spacing: 6px;
+  }
+
+  h2 {
+    font-size: 1.5em;
+    letter-spacing: 4px;
+    margin-left: 2em;
+    text-transform: uppercase;
+  }
 }
 
 .nav-ul-homepage {
+  color: $snow;
+  font-family: $sans-serif;
   float: right;
   padding-right: 1.5em;
 
@@ -12,5 +34,112 @@ header {
     display: inline-block;
     text-decoration: none;
     margin: $base-spacing;
+  }
+
+  .store-button {
+    background-color: $tomato;
+    border-radius: 5px;
+    padding: .5em 1.5em;
+
+    &:hover {
+      background-color: lighten($tomato,5%);
+      color: $snow;
+    }
+  }
+}
+
+.homepage-header-text {
+  bottom: 10%;
+  left: 0;
+  position: absolute;
+  margin-bottom: 10em;
+}
+
+.workshop-highlight {
+  padding: .5em 1em;
+  border-radius: 5px;
+  border: $base-border;
+}
+
+.history, .history-red, .history-quote {
+  color: $dark-gray;
+  padding: 5em 1em;
+  text-align: center;
+
+  h1, p {
+    text-align: left;
+    -moz-animation: fadein 2s; /* Firefox < 16 */
+    -ms-animation: fadein 2s; /* Internet Explorer */
+    -o-animation: fadein 2s; /* Opera < 12.1 */
+    animation: fadein 10s;
+  }
+
+  h1 {
+    font-size: 1.6em;
+    line-height: 1.3em;
+    transition: all .5s ease-in;
+  }
+
+  p {
+    font-size: 1.1em;
+    line-height: 2em;
+    padding-top: 2em;
+  }
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+
+.history-container {
+  margin: 0 auto;
+  max-width: em(600px);
+}
+
+.history-red {
+  background-color: $tomato;
+  color: $snow;
+}
+
+.history-quote {
+  .history-quote-container {
+    max-width: em(800px);
+    margin: 0 auto;
+  }
+
+  h1 {
+    text-align: left;
+    font-size: 2em;
+  }
+
+  h2 {
+    padding-top: 1em;
+    text-align: right;
   }
 }
