--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -238,7 +238,7 @@ input[type="submit"] {
   white-space: nowrap; }
 
 .header-homepage {
-  background: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url("../assets/images/header-background.jpg") center center fixed no-repeat;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url("/assets/images/header-background.jpg") center center fixed no-repeat;
   background-size: cover;
   color: #ffffff;
   width: 100vw;
@@ -288,14 +288,7 @@ input[type="submit"] {
   padding: 5em 1em;
   text-align: center; }
   .history h1, .history p, .history-red h1, .history-red p, .history-quote h1, .history-quote p {
-    text-align: left;
-    -moz-animation: fadein 2s;
-    /* Firefox < 16 */
-    -ms-animation: fadein 2s;
-    /* Internet Explorer */
-    -o-animation: fadein 2s;
-    /* Opera < 12.1 */
-    animation: fadein 10s; }
+    text-align: left; }
   .history h1, .history-red h1, .history-quote h1 {
     font-size: 1.6em;
     line-height: 1.3em;
@@ -305,35 +298,6 @@ input[type="submit"] {
     line-height: 2em;
     padding-top: 2em; }
 
-@keyframes fadein {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
-/* Internet Explorer */
-@-ms-keyframes fadein {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
 .history-container {
   margin: 0 auto;
   max-width: 37.5em; }
