--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -238,7 +238,7 @@ input[type="submit"] {
   white-space: nowrap; }
 
 .header-homepage {
-  background: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url("/assets/images/header-background.jpg") center center fixed no-repeat;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url("../../images/header-background.jpg") center center fixed no-repeat;
   background-size: cover;
   color: #ffffff;
   width: 100vw;
@@ -303,7 +303,7 @@ input[type="submit"] {
   max-width: 37.5em; }
 
 .history-red {
-  background-color: #c0392b;
+  background-color: #444;
   color: #ffffff; }
 
 .history-quote .history-quote-container {
@@ -315,3 +315,5 @@ input[type="submit"] {
 .history-quote h2 {
   padding-top: 1em;
   text-align: right; }
+
+/*# sourceMappingURL=css.css.map */
