Fixed header image

--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -1,5 +1,5 @@
 .header-homepage {
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("../../../../assets/images/header-background.jpg") center center fixed no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("../images/header-background.jpg") center center fixed no-repeat;
   background-size: cover;
   color: $snow;
   width: 100vw;
