--- a/assets/scss/pages/_footer.scss
+++ b/assets/scss/pages/_footer.scss
@@ -2,6 +2,7 @@ footer {
   background-color: $dark-gray;
   padding: 1em 0;
   font-family: $sans-serif;
+  text-transform: uppercase;
 
   a {
     color: $snow;
