--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -362,6 +362,8 @@ footer {
     padding: 1em 0 1em 0;
     font-size: 1.5em; }
 
+.classes-container h1 {
+  padding-bottom: 2em; }
 .classes-container h2 {
   padding: 0; }
 
@@ -412,5 +414,43 @@ footer {
 
 .store {
   max-width: 62.5em; }
+  .store h1 {
+    border-bottom: 2px solid #c0392b;
+    padding-bottom: .5em; }
+
+.store-book-container {
+  display: inline-block;
+  width: 20em;
+  padding: 2em 3em;
+  margin-left: 0;
+  padding-left: 0;
+  text-align: center; }
+  .store-book-container h3 {
+    font-size: 1em;
+    font-weight: 700;
+    margin: 0 auto;
+    padding: 1em 0 0 0;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-align: center; }
+  .store-book-container h4 {
+    font-size: .9em;
+    font-weight: 400;
+    text-align: center;
+    padding-bottom: 1em; }
+  .store-book-container h5 {
+    font-size: .8em;
+    padding-top: 1em;
+    font-weight: 400; }
+
+.book-details-link {
+  text-align: center;
+  color: #fff;
+  background-color: #c0392b;
+  border-radius: 5px;
+  padding: .5em 1.5em; }
+  .book-details-link:hover {
+    background-color: #d14233;
+    color: #ffffff; }
 
 /*# sourceMappingURL=css.css.map */
