added classes page, bio of teachers

--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -32,13 +32,14 @@ $light-gray: #DDD;
 $light-red: #FBE3E4;
 $light-yellow: #FFF6BF;
 $light-green: #E6EFC2;
+$gossip: #87D37C;
 
 // Background Color
 $base-background-color: white;
 
 // Font Colors
 $base-font-color: $dark-gray;
-$base-accent-color: $blue;
+$base-accent-color: $tomato;
 
 // Link Colors
 $base-link-color: $base-accent-color;
