--- a/assets/scss/pages/_store.scss
+++ b/assets/scss/pages/_store.scss
@@ -1,9 +1,17 @@
 .store {
   max-width: em(1000);
+  text-align: left;
 
   h1 {
     border-bottom: 2px solid $tomato;
     padding-bottom: .5em;
+  }
+}
+
+.store-section {
+  h3 {
+    margin-top: 3em;
+    text-align: center;
   }
 }
 
@@ -32,14 +40,31 @@
     padding-bottom: 1em;
   }
 
-  h5 {
+  h5, h6 {
     font-size: .8em;
     padding-top: 1em;
     font-weight: 400;
   }
+
+  h6 {
+    font-size: 1em;
+    padding-top: 1.5em;
+  }
 }
 
 .book-details-link {
+  text-align: center;
+  color: $tomato;
+  border-radius: 5px;
+  padding: .5em 1.5em;
+
+  &:hover {
+    border: 1px solid lighten($tomato,5%);
+    color: $tomato;
+  }
+}
+
+.paypal-link {
   text-align: center;
   color: #fff;
 
@@ -50,5 +75,21 @@
   &:hover {
     background-color: lighten($tomato,5%);
     color: $snow;
+  }
+}
+.books-section {
+  padding-bottom: 0;
+}
+
+.popup {
+  h3 {
+    padding-bottom: 1em;
+    font-size: 1em;
+    text-transform: uppercase;
+    text-align: center;
+  }
+
+  p {
+    line-height: 1.8em;
   }
 }
