--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -20,7 +20,7 @@ html {
 button,
 input[type="submit"] {
   -webkit-font-smoothing: antialiased;
-  background-color: #477DCA;
+  background-color: #c0392b;
   border-radius: 3px;
   color: white;
   display: inline-block;
@@ -31,7 +31,7 @@ input[type="submit"] {
   text-decoration: none; }
   button:hover,
   input[type="submit"]:hover {
-    background-color: #2c5999;
+    background-color: #81261d;
     color: white; }
   button:disabled,
   input[type="submit"]:disabled {
@@ -84,12 +84,12 @@ a {
   -webkit-transition: color 0.1s linear;
   -moz-transition: color 0.1s linear;
   transition: color 0.1s linear;
-  color: #477DCA;
+  color: #c0392b;
   text-decoration: none; }
   a:hover {
-    color: #2c5999; }
+    color: #81261d; }
   a:active, a:focus {
-    color: #2c5999;
+    color: #81261d;
     outline: none; }
 
 hr {
@@ -162,8 +162,8 @@ select[multiple=multiple] {
   textarea:focus,
   input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus,
   select[multiple=multiple]:focus {
-    border-color: #477DCA;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
+    border-color: #c0392b;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(171, 51, 38, 0.7);
     outline: none; }
 
 textarea {
@@ -363,8 +363,9 @@ footer {
     font-size: 1.5em; }
 
 .classes-container h1 {
-  padding-bottom: 2em; }
+  padding-bottom: 0; }
 .classes-container h2 {
+  margin-top: 3em;
   padding: 0; }
 
 .america-container {
@@ -395,6 +396,15 @@ footer {
     font-size: 1.3em;
     padding-top: 1em; }
 
+.image-popup img {
+  margin-bottom: 2em; }
+
+.instructor-container {
+  padding-top: 3em; }
+
+.london-title {
+  padding-top: 3em; }
+
 .lineage {
   background-color: #DDD; }
   .lineage h1 {
@@ -402,6 +412,7 @@ footer {
     padding: 3em 0 1em 0; }
 
 .workshops {
+  background-color: #DDD;
   text-align: left; }
   .workshops h1 {
     font-size: 1.5em; }
@@ -412,11 +423,19 @@ footer {
   .workshops h2:nth-last-of-type {
     margin-bottom: 0; }
 
+.book-details-popup {
+  width: 100%; }
+
 .store {
-  max-width: 62.5em; }
+  max-width: 62.5em;
+  text-align: left; }
   .store h1 {
     border-bottom: 2px solid #c0392b;
     padding-bottom: .5em; }
+
+.store-section h3 {
+  margin-top: 3em;
+  text-align: center; }
 
 .store-book-container {
   display: inline-block;
@@ -438,19 +457,42 @@ footer {
     font-weight: 400;
     text-align: center;
     padding-bottom: 1em; }
-  .store-book-container h5 {
+  .store-book-container h5, .store-book-container h6 {
     font-size: .8em;
     padding-top: 1em;
     font-weight: 400; }
+  .store-book-container h6 {
+    font-size: 1em;
+    padding-top: 1.5em; }
 
 .book-details-link {
+  text-align: center;
+  color: #c0392b;
+  border-radius: 5px;
+  padding: .5em 1.5em; }
+  .book-details-link:hover {
+    border: 1px solid #d14233;
+    color: #c0392b; }
+
+.paypal-link {
   text-align: center;
   color: #fff;
   background-color: #c0392b;
   border-radius: 5px;
   padding: .5em 1.5em; }
-  .book-details-link:hover {
+  .paypal-link:hover {
     background-color: #d14233;
     color: #ffffff; }
+
+.books-section {
+  padding-bottom: 0; }
+
+.popup h3 {
+  padding-bottom: 1em;
+  font-size: 1em;
+  text-transform: uppercase;
+  text-align: center; }
+.popup p {
+  line-height: 1.8em; }
 
 /*# sourceMappingURL=css.css.map */
