--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -16,6 +16,7 @@
 .popup_cont {
 	position: fixed;
 	z-index: 102;
+  height:100%;
 }
 
 .preloader {
@@ -50,7 +51,9 @@ div.popup {
 	background: #fff;
 	padding: 25px;
 	box-shadow: 0 3px 10px #222;
+  height: 90%;
   max-width: 40em;
+  overflow: scroll;
 }
 
 .preloader {
@@ -58,4 +61,13 @@ div.popup {
 	margin: -10px 0 0 -25px;
 	position: fixed;
 	top: 50%;
+}
+
+.popup_content img {
+  display: block;
+  margin: 2em auto;
+}
+
+.popup_content p {
+  padding-top: 2em;
 }
