--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -13,6 +13,10 @@
   h1 {
     font-size: 4em;
     letter-spacing: 6px;
+
+    @media screen and (max-width: 700px) {
+      font-size: 2em;
+    }
   }
 
   h2 {
@@ -20,6 +24,10 @@
     letter-spacing: 4px;
     margin-left: 2em;
     text-transform: uppercase;
+    @media screen and (max-width: 700px) {
+      font-size: 1em;
+      margin-left: 1em;
+    }
   }
 }
 
@@ -34,6 +42,10 @@
     display: inline-block;
     text-decoration: none;
     margin: $base-spacing 1em;
+
+    @media screen and (max-width:700px) {
+      margin: .5em;
+    }
   }
 
   .store-button {
@@ -53,6 +65,13 @@
 
   a:hover {
     color: darken($snow,20%);
+  }
+
+  @media screen and (max-width: 700px) {
+    font-size: .8em;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 1em;
   }
 }
 
@@ -134,4 +153,18 @@
     font-size: .8em;
     font-weight: 400;
   }
+}
+
+.bg-image {
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("../images/bg-image3.jpg") center center fixed no-repeat;
+  background-size: cover;
+  color: $snow;
+  width: 100vw;
+}
+
+.bg-image2 {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("../images/bg-image2.jpg") center center fixed no-repeat;
+  background-size: cover;
+  color: $snow;
+  width: 100vw;
 }
