--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -24,6 +24,7 @@
     letter-spacing: 4px;
     margin-left: 2em;
     text-transform: uppercase;
+
     @media screen and (max-width: 700px) {
       font-size: 1em;
       margin-left: 1.5em;
@@ -168,4 +169,14 @@
   background-size: cover;
   color: $snow;
   width: 100vw;
+
+  @media only screen
+    and (min-device-width : 540px)
+    and (max-device-width : 960px)
+    and (orientation : portrait) { background-attachment: scroll; }
+
+  @media only screen
+    and (min-device-width : 540px)
+    and (max-device-width : 960px)
+    and (orientation : landscape) {background-attachment: scroll;}
 }
