--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -238,7 +238,7 @@ input[type="submit"] {
   white-space: nowrap; }
 
 .header-homepage {
-  background: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url("../images/header-background.jpg") center center fixed no-repeat;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url("../images/header-background.jpg") center center scroll no-repeat;
   background-size: cover;
   color: #ffffff;
   width: 100vw;
@@ -349,22 +349,16 @@ input[type="submit"] {
     font-weight: 400; }
 
 .bg-image {
-  background: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url("../images/bg-image3.jpg") center center fixed no-repeat;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url("../images/bg-image3.jpg") center center scroll no-repeat;
   background-size: cover;
   color: #ffffff;
   width: 100vw; }
 
 .bg-image2 {
-  background: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url("../images/bg-image2.jpg") center center fixed no-repeat;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url("../images/bg-image2.jpg") center center scroll no-repeat;
   background-size: cover;
   color: #ffffff;
   width: 100vw; }
-  @media only screen and (min-device-width: 540px) and (max-device-width: 960px) and (orientation: portrait) {
-    .bg-image2 {
-      background-attachment: scroll; } }
-  @media only screen and (min-device-width: 540px) and (max-device-width: 960px) and (orientation: landscape) {
-    .bg-image2 {
-      background-attachment: scroll; } }
 
 footer {
   background-color: #444;
