--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -4,8 +4,7 @@
   color: $snow;
   width: 100vw;
   height: 90vh;
-  box-sizing: content-box
-
+  z-index: 0;
 
   h1, h2, h3 {
     clear: both;
@@ -15,6 +14,7 @@
   h1 {
     font-size: 4em;
     letter-spacing: 6px;
+    margin-left: .7em;
 
     @media screen and (max-width: 700px) {
       font-size: 2em;
@@ -164,8 +164,6 @@
   background-size: cover;
   color: $snow;
   width: 100vw;
-  box-sizing: content-box
-
 }
 
 .bg-image2 {
@@ -173,6 +171,4 @@
   background-size: cover;
   color: $snow;
   width: 100vw;
-  box-sizing: content-box
-
 }
